Fixed alignment classes to apply to p and h1 - 6 tags as well

--- a/assets/css/emma.css
+++ b/assets/css/emma.css
@@ -396,10 +396,19 @@ table.column .text-pad-right {
 }
 /* Alignment & Visibility Classes */
 table.center,
-td.center,
-p.center {
+td.center {
   text-align: center;
 }
+td.center > p,
+td.center > h1,
+td.center > h2,
+td.center > h3,
+td.center > h4,
+td.center > h5,
+td.center > h6 {
+  text-align: center;
+}
+p.center,
 h1.center,
 h2.center,
 h3.center,
